# karaoke-school

./: .dockerignore  .env.example  .gitignore  .gitmodules  AGENTS.md  ARCHITECTURE-LIT-ACTIONS.md  ARCHITECTURE.md  ARTIST_PROFILE_INTEGRATION.md  CLAUDE.md  DECOUPLING-STRATEGY.md  DEMUCS_SETUP.md  DEPLOYMENT_SUMMARY.md  DOCS_CLEANUP_PLAN.md  DOCUMENTATION_CLEANUP_SUMMARY.md  Dockerfile  FOUNDATION_STATUS.md  FRONTEND_ROUTING_PLAN.md  KARAOKE_ARCHITECTURE.md  LENS-AUTH-FIX.md  LIT_WEBAUTHN_MIGRATION.md  MLC_INTEGRATION.md  MLC_INTEGRATION_REVISED.md  README.md  REFACTORING_PLAN.md  SEGMENT_ARCHITECTURE.md  STATE_MANAGEMENT_REVIEW.md  STUDENT-TRACKING-IMPLEMENTATION.md  SYSTEM-OVERVIEW.md  TRENDING.md  WARP.md  index.ts  monitor_scraper.py  package-lock.json  package.json  render.yaml  run_tiktok_scraper.py  test_single_creator.py  vite.config.ts
.storybook/: main.ts  preview.tsx
Spotify/: README.md  check-spotify-import.ts  clean-import.ts  clear-all-data.ts  clear-tables.ts  create-tables.ts  direct-import.ts  final-import.ts  import-all.ts  import-script.ts  package.json  parallel-import.ts  recreate-tables.ts  robust-import.ts  simple-import.ts  verify-import.ts
quansic-service/: .dockerignore  .gitignore  ACCOUNT_SETUP.md  AGENTS.md  AUTHENTICATION_ANALYSIS.md  Dockerfile  README.md  build-and-push.sh  compare-endpoints.sh  deploy-akash.yaml  deploy.yml  example-client.ts  index.ts  main.py  models.py  package.json  pyproject.toml  quansic_service.py  requirements.txt  test-enrichment.sh  test-iswc.sh  test-service.sh  test-work-search.ts  test_hrequests_direct.py
(+3533 files in other folders)
